samples/_failures_safe/1761786962_c52ea2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7190cc87.c: In function ‘main’:
./samples/SAFE/__tmp_7190cc87.c:156:16: error: missing terminating " character
  156 |         printf("\nEnter log level to view (ERROR=0, WARN=1, INFO=2, DEBUG=3, -1 to exit
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7190cc87.c:156:9: error: expected expression at end of input
  156 |         printf("\nEnter log level to view (ERROR=0, WARN=1, INFO=2, DEBUG=3, -1 to exit
      |         ^~~~~~
./samples/SAFE/__tmp_7190cc87.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7190cc87.c:156:9: error: expected declaration or statement at end of input
